syntax = "proto3";

import "google/protobuf/timestamp.proto";

package apache.rocketmq.controller.v1;

option java_multiple_files = true;
option java_package = "apache.rocketmq.controller.v1";
option java_generate_equals_and_hash = true;
option java_string_check_utf8 = true;
option java_outer_classname = "ControllerAdmin";

message Lease {
  int32 node_id = 1;
  int32 epoch = 2;
  google.protobuf.Timestamp expiration_timestamp = 3;
}

message Node {
  // Node ID
  int32 id = 1;

  // Node name
  string name = 2;

  // Number of topics served by this node
  int32 topic_num = 3;

  // Number of queues served by this node
  int32 queue_num = 4;

  // Number of streams served by this node
  int32 stream_num = 5;

  // Flag if this node is going offline shortly
  bool going_away = 6;

  // Timestamp that the leader receives heartbeat from this node
  google.protobuf.Timestamp last_heartbeat = 7;

  // Advertise address
  string address = 8;
}

message ClusterSummary {
  // Total quantity of topics
  int32 topic_quantity = 1;

  // Total quantity of queues
  int32 queue_quantity = 2;

  // Total quantity of streams
  int32 stream_quantity = 3;

  // Total quantity of nodes
  int32 node_quantity = 4;

  // Total quantity of groups
  int32 group_quantity = 5;
}

message Cluster {
  // Overall cluster summary
  ClusterSummary summary = 1;

  // Cluster leadership lease
  Lease lease = 2;

  // List of cluster nodes
  repeated Node nodes = 3;
}